# CPPNodeAddon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  binding.gyp  main.cpp  package.json
NodeWrap/: SampleObjectWrap.h
src/: MsgBuffer.cpp  MsgBuffer.h  SampleObject.cpp  SampleObject.h  SampleObjectWrap.cpp  SampleObjectWrap.h
test/cpp/: BoilerplateTestCase.cpp  BoilerplateTestCase.h  MsgBufferTestCase.cpp  MsgBufferTestCase.h  SampleObjectTestCase.cpp  SampleObjectTestCase.h
test/js/: boiler-test.js  nan-wrap-test.js
